--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,11 @@ edition = "2021"
 [dependencies]
 clap = { version = "3.1.18", features = ["derive"] }
 anyhow = "1.0.57"
+exitcode = "1.1.2"
+
+ahash = { version = "0.7.6", features = ["serde"] }
+hashlink = { version = "0.8.0", features = ["serde_impl"] }
 
 serde = { version = "1.0.137", features = ["derive"]}
+serde_json = "1.0.81"
 nom = "7.1.1"
