--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,12 @@ path = "src/main.rs"
 clap = { version = "3.2.16", features = ["derive"] }
 anyhow = "1.0.60"
 exitcode = "1.1.2"
+thiserror = "1.0.32"
 
 ahash = { version = "0.8.0", features = ["serde"] }
 hashlink = { version = "0.8.0", features = ["serde_impl"] }
 
 serde = { version = "1.0.143", features = ["derive"]}
 serde_json = "1.0.83"
+serde_test = "1.0.143"
 nom = "7.1.1"
